--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  collection: ^1.15.0
+  rxdart: ^0.27.1
+  freezed_annotation: ^0.14.2
 
 dev_dependencies:
   test: ^1.17.11
+  build_runner: ^2.1.1
+  freezed: ^0.14.2
 
 flutter:
   uses-material-design: true
