--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   collection: ^1.15.0
   rxdart: ^0.27.1
   freezed_annotation: ^0.14.2
+  universal_html: ^2.0.8
+  path_provider: ^2.0.2
+  share_plus: ^2.1.4
 
 dev_dependencies:
   test: ^1.17.11
