--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,9 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   fonts:
+    - family: SawarabiGothic
+      fonts:
+        - asset: assets/SawarabiGothic-Regular.ttf
     - family: NotoColorEmoji
       fonts:
         - asset: assets/NotoColorEmoji.ttf
-    - family: NotoSansCJK
-      fonts:
-        - asset: assets/NotoSansCJKjp-Regular.otf
