--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/NotoColorEmoji.ttf":["assets/NotoColorEmoji.ttf"],"assets/NotoSansCJKjp-Regular.otf":["assets/NotoSansCJKjp-Regular.otf"]}
+{"assets/NotoColorEmoji.ttf":["assets/NotoColorEmoji.ttf"],"assets/SawarabiGothic-Regular.ttf":["assets/SawarabiGothic-Regular.ttf"]}
