--- a/assets/FontManifest.json
+++ b/assets/FontManifest.json
@@ -1,1 +1,1 @@
-[{"family":"MaterialIcons","fonts":[{"asset":"fonts/MaterialIcons-Regular.otf"}]},{"family":"SawarabiGothic","fonts":[{"asset":"assets/SawarabiGothic-Regular.ttf"}]},{"family":"NotoColorEmoji","fonts":[{"asset":"assets/NotoColorEmoji.ttf"}]}]
+[{"family":"MaterialIcons","fonts":[{"asset":"fonts/MaterialIcons-Regular.otf"}]},{"family":"SawarabiGothic","fonts":[{"asset":"assets/SawarabiGothic-Regular.ttf"}]}]
