--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   universal_html: ^2.0.8
   path_provider: ^2.0.2
   share_plus: ^2.1.4
+  image_picker: ^0.8.4
 
 dev_dependencies:
   test: ^1.17.11
