deploy: dcf82d8fec22316e8f0d2652f89059724d166d26

--- a/assets/FontManifest.json
+++ b/assets/FontManifest.json
@@ -1,1 +1,1 @@
-[{"family":"MaterialIcons","fonts":[{"asset":"fonts/MaterialIcons-Regular.otf"}]},{"family":"SawarabiGothic","fonts":[{"asset":"assets/SawarabiGothic-Regular.ttf"}]}]
+[{"family":"MaterialIcons","fonts":[{"asset":"fonts/MaterialIcons-Regular.otf"}]},{"family":"KosugiMaru","fonts":[{"asset":"assets/KosugiMaru-Regular.ttf"}]}]
